--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-redux": "^7.1.8",
     "@types/react-table": "^7.0.17",
+    "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
