--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-table": "^7.0.17",
     "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
@@ -23,6 +24,7 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-table": "^7.0.4",
     "redux": "^4.0.5",
